# rust-note-api

./: .env.example  Cargo.toml  README.md  build.sh  diesel.toml
migrations/2024-08-01-103613_create_notes/: down.sql  up.sql
migrations/2024-10-26-180644_note_api/: up.sql
migrations/2024-10-27-033530_rust_note_api/: up.sql
src/: main.rs  models.rs  schema.rs
src/handlers/: mod.rs
src/handlers/auth_handlers/: actors.rs  auth_handlers.rs  insertables.rs  messages.rs  mod.rs  two_fa_handlers.rs  user_handlers.rs
src/handlers/note_handlers/: actors.rs  insertables.rs  messages.rs  mod.rs  note_handlers.rs  utils.rs
src/handlers/test_handlers/: test_handlers.rs
src/handlers/transaction_handlers/: transaction_handlers.rs
src/middlewares/: auth_middlewares.rs
src/routes/: mod.rs  note_routes.rs  test_routes.rs
src/routes/admin_routes/: admin_routes.rs
src/routes/auth_routes/: auth_routes.rs
src/routes/handlers/: actors.rs  insertables.rs  mod.rs  note_handlers.rs  test_handlers.rs
src/routes/handlers/auth_handlers/: actors.rs  auth_handlers.rs  insertables.rs  messages.rs  mod.rs  two_fa_handlers.rs  user_handlers.rs
src/routes/handlers/note_handlers/: actors.rs  insertables.rs  messages.rs  note_handlers.rs
src/routes/handlers/test_handlers/: test_handlers.rs
src/routes/middlewares/: auth_middlewares.rs
src/routes/note_routes/: mod.rs  note_routes.rs
src/routes/test_routes/: test_routes.rs
src/routes/transaction_routes/: transaction_routes.rs
src/utils/: constants.rs  db.rs  jwt.rs  mod.rs
(+2 files in other folders)
