[package]
name = "rust-note-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.121"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
jsonwebtoken = "9.3.0"
actix-web-lab = "0.20.2"
bcrypt = "0.15.1"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
totp-rs = "5.6.0"
base32 = "0.5.1"
rand = "0.8.5"
